feat: add swagger documentation for create user endpoint
