# router/users.go
@@ -9,7 +9,7 @@ import (
 func userRouter(r *gin.RouterGroup) {
 	r.GET("", controller.GetAllUsers)
 	r.GET("/:id", controller.GetUser)
-	r.POST("/Create", controller.CreateUser)
+	r.POST("", controller.CreateUser)
 	r.PATCH("/:id", controller.UpdateUser)
 	r.DELETE("/:id", controller.DeleteUser)
 }
